<resources>
    <string name="app_name">CLUBIN</string>
    <string name="to_join"><u>Se connecter</u></string>
    <string name="extra_bold">CLUBIN</string>
    <string name="bold">CLUBIN</string>
    <string name="semi_bold">CLUBIN</string>
    <string name="medium">CLUBIN</string>
    <string name="regular">CLUBIN</string>
    <string name="onboarding_one_title">Blueberry</string>
    <string name="onboarding_one_headline">Blueberries are sweet, nutritious and wildly popular fruit all over the world.</string>
    <string name="onboarding_two_title">Strawberry</string>
    <string name="onboarding_two_headline">Widely appreciated for its characteristic aroma,  red color, juicy texture, and sweetness.</string>
    <string name="onboarding_three_title">Lemon</string>
    <string name="onboarding_three_headline">There\'s no doubt lemons are delicious, but does adding them to water make you healthier?</string>
    <string name="onboarding_four_title">Plum</string>
    <string name="onboarding_four_headline">Plums are a very nutritious fruit. An excellent source of vitamins, minerals, fiber and antioxidants.</string>
    <string name="onboarding_five_title">Lime</string>
    <string name="onboarding_five_headline">Sour, round, and bright green citrus fruits. Limes are high in vitamin C, antioxidants, and other nutrients.</string>
    <string name="onboarding_six_title">Pomegranate</string>
    <string name="onboarding_six_headline">Sweet, bell-shaped fruits that have been enjoyed since ancient times. They can be eaten crisp or soft.</string>
    <string name="onboarding_seven_title">Pear</string>
    <string name="onboarding_seven_headline">Sweet, bell-shaped fruits that have been enjoyed since ancient times. They can be eaten crisp or soft.</string>
    <string name="onboarding_eight_title">Gooseberry</string>
    <string name="onboarding_eight_headline">Sweet, bell-shaped fruits that have been enjoyed since ancient times. They can be eaten crisp or soft.</string>
    <string name="onboarding_nine_title">Mango</string>
    <string name="onboarding_nine_headline">Sweet, bell-shaped fruits that have been enjoyed since ancient times. They can be eaten crisp or soft.</string>
    <string name="onboarding_ten_title">Watermelon</string>
    <string name="onboarding_ten_headline">Sweet, bell-shaped fruits that have been enjoyed since ancient times. They can be eaten crisp or soft.</string>
    <string name="onboarding_eleven_title">Cherry</string>
    <string name="onboarding_eleven_headline">Sweet, bell-shaped fruits that have been enjoyed since ancient times. They can be eaten crisp or soft.</string>
    <string name="onboarding_twelve_title">Grapefruit</string>
    <string name="onboarding_twelve_headline">Sweet, bell-shaped fruits that have been enjoyed since ancient times. They can be eaten crisp or soft.</string>
    <string name="onboarding_thirteen_title">Apple</string>
    <string name="onboarding_thirteen_headline">Apples are one of the most popular, and exceptionally healthy fruit for good reason.</string>
    <string name="password_reset_title">Mot de passe oublié ?</string>
    <string name="password_reset_message">Entrez votre e-mail associé à ce compte pour recevoir votre code de validation
    </string>
    <string name="password_reset_link">Centre d\'aide</string>
    <string name="password_reset_details">
       <font color="#FFFFFF">Vous n\'avez plus accès à cet e-mail ?</font>
       <font color="#FFFFFF">\nMerci de contacter notre</font>
       <font color="#FFFFFF">Service Client</font>
       <font color="#FFFFFF">depuis le</font>
       <font color="#4C9FBE">\nCentre d\'aide</font>
    </string>
    <string name="password_reset_placeholder">Nouveau mot de passe</string>
    <string name="password_reset_button">Envoyer le code</string>
    <string name="password_code_title">Entrez votre code</string>
    <string name="password_code_message">Un code de reinitialisation vous a etait envoye par email.</string>
    <string name="password_code_details">
           <font color="#FFFFFF">Vous n\'avez pas reçu de code ?</font>
       <font color="#FFFFFF"> \nEssayer d\'actualiser votre boite mail et de vérifier vos spams.
           \nSi le problème persiste, merci de contacter notre.</font>
    <font color="#4C9FBE">\nCentre d\'aide</font></string>
    <string name="password_code_placeholder">Code</string>
    <string name="password_code_button">Valider</string>
    <string name="password_new_title">Créer un nouveau mot de passe</string>
    <string name="password_new_message">Vous l\'utiliserez pour accéder à votre compte.</string>
    <string name="password_new_placeholder">Nouveau mot de passe</string>
    <string name="password_new_details">Minimum 8 caractères.\nVous pourrez le changer plus tard.</string>
    <string name="password_new_button">Sauvegarder</string>
    <string name="inscription_age_title">Quel age avez-vous?</string>
    <string name="inscription_age_placeholder">Age</string>
    <string name="inscription_age_details">
       <font color="#ffffff">Saisissez votre age, puis appuyer sur Suivant pour
           confirmer que vous avez compris et accepté notre</font>
      <font color="#4C9FBE">\nPolitique relative à la vie privée</font>
    </string>
    <string name="inscription_age_button">Valider</string>
    <string name="inscription_name_title">Comment vous appelez-vous ?</string>
    <string name="first_name_placeholder">Prénom</string>
    <string name="last_name_placeholder">Nom</string>
    <string name="inscription_name_details">Merci de renseigner votre vrai nom afin de permettre la
           vérification de votre profil et d\'améliorer l\'experience utilisateur.
    </string>
    <string name="inscription_name_button">Valider</string>
    <string name="inscription_email_title">Quelle est votre adresse e-mail ?</string>
    <string name="email_placeholder">E-mail</string>
    <string name="inscription_email_wrong">Merci de renseigner un e-mail valide ou non utilisé
    </string>
    <string name="inscription_email_correct">Cette adresse vous servira à vous connecter.</string>
    <string name="inscription_email_button">Valider</string>
    <string name="inscription_password_title">Créer un mot de passe</string>
    <string name="password_placeholder">Mot de passe</string>
    <string name="confirm_password_placeholder">Vérifier votre mot de passe</string>
    <string name="inscription_password_details">Minimum 8 caractères.\nVous pourrez le changer plus tard
    </string>
    <string name="inscription_password_button">Terminer</string>
    <string name="onboarding_heading">Terminer</string>
    <string name="onboarding_message">Terminer</string>
    <string name="button_text">Start</string>
    <string name="next">Next</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login_title">Se connecter</string>
    <string name="login_message"></string>
    <string name="login_details"><u>Mot de passe oublié ?</u></string>
    <string name="login_button">Se connecter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confidential_title">Confidentialité</string>
    <string name="message_1">Nous respectons vos données</string>
    <string name="message_2">
       <font color="#ffffff">Le respect de vos données est essentiel. Nos partenaires et
nous utilisons des informationn non sensibles de votre appareil (dont ID publicitaires, adresses MAC ou IP, données de géolocalisation)
           et profil utilisateur (dont donnnées démographiques lorsque cette information est disponible)
           afin d\'améliorer votre expérience sur notre service, assurer son bon fonctionnement
 et vous proposer des contenus personnalisés. Pour en savoir plus sur les données personnelles que
           nous utilisons et les traitements que nous réalisons, vous pouvez consulter notre</font>
        <font color="#1D67CF">Politique de confidentialité.</font>
    </string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="votre_adresse">à <b>12 km</b> de votre adresse</string>
    <string name="report_ad"><u>Signaler l\'annonce</u></string>
</resources>