<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="SignUpPasswordFragmentDataBinding">

        <variable
            name="callback"
            type="com.clubin.com.ui.fragment.profile.callbacks.AccountEditFragmentCallback" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ui.auth.passwordreset.view.PasswordResetEmailActivity">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            style="@style/extraBoldTextView"
            android:text="@string/inscription_password_title" />


        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/textViewTitle"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/password_placeholder"
            android:inputType="textPassword"
            android:paddingLeft="15dp" />

        <TextView
            android:id="@+id/textViewDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPassword"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            style="@style/regularTextView"
            android:text="@string/inscription_password_details"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/editTextTextConfirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/textViewDetails"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/confirm_password_placeholder"
            android:inputType="textPassword"
            android:paddingLeft="15dp" />


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/_10sdp"
            android:backgroundTint="@color/purple_button"
            android:padding="10dp"
            android:text="@string/inscription_password_button"
            style="@style/boldButton" />
    </RelativeLayout>
</layout>