<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="ViewModel"
            type="com.clubin.com.ui.auth.passwordreset.viewmodel.PREmailViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <TextView
            android:id="@+id/textViewTitle"
            style="@style/extraBoldTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/password_reset_title"
            android:textSize="28sp" />


        <TextView
            android:id="@+id/textViewMessage"
            style="@style/mediumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewTitle"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="17dp"
            android:text="@string/password_reset_message"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/textViewMessage"
            android:layout_margin="20dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="E-mail"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp" />

        <TextView
            android:id="@+id/textViewDetails"
            style="@style/regularTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextTextEmailAddress"
            android:layout_marginLeft="20dp"
            android:text="@string/password_reset_details"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button"
            style="@style/boldButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:backgroundTint="@color/green"
            android:padding="10dp"
            android:text="@string/password_reset_button"
            android:textAllCaps="false" />
    </RelativeLayout>
</layout>